1998-11-30  Tom Tromey  <tromey@cygnus.com>

	* Makefile.in: Rebuilt.
	* Makefile.am: Removed now-incorrect comment.
	Include `choices' file.
	(classes.stamp): Depend on and use CHOICES macro.
	(java_files): Use CHOICES.
	(check-local): Depend on CHOICES.

	* choose: More output when verbose.  Only tags starting with
	`java.' are considered to be class selectors.  Define macro in
	choices file.

	* gnu/testlet/java/lang/Character/getType.java: Added Tags line
	* gnu/testlet/java/lang/Character/classify12.java: New file.
	* gnu/testlet/java/lang/Character/classify.java: Added Tags line;
	removed JDK1.2-specific test.

	* README: Updated to mention keys.
	* Makefile.in: Rebuilt.
	* Makefile.am (recheck): Actually run `check' target.
	(BUILT_SOURCES): Removed.

	* Makefile.in: Rebuilt.
	* Makefile.am (harness_files): New macro.
	(java_files): Now conditional.
	(KEYS): New macro.
	(choices): New target.
	(classes.stamp): Depend on `choices'.
	(test_files): Removed.
	(test_names): Likewise.
	(check-local): Use `classes' file to determine classes to run.
	(EXTRA_SimpleTestHarness_SOURCES): Removed.
	(class_files): Use `choices' file.
	(FORCE): New target.
	(recheck): New target.
	* gnu/testlet/SimpleTestHarness.java (main): Read classes to
	process from stdin.
	* choose: New file.

1998-11-25  Tom Tromey  <tromey@cygnus.com>

	* README: New file.

1998-11-24  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/util/Random/basic.java: New file.
	* gnu/testlet/java/util/Hashtable/basic.java: New file.

	* Makefile.in: Rebuilt.
	* Makefile.am (CLEANFILES): Added classes.stamp; define in no-gcj
	case.
	(check-local): Depend on classes.stamp, not $(check_PROGRAMS).

	* gnu/testlet/java/lang/Long/new_Long.java: New file.

	* Makefile.in: Rebuilt.
	* Makefile.am (check-local): Use correct name for
	SimpleTestHarness class.

	* configure: Rebuilt.
	* configure.in: Recognize --with-gcj.

	* gnu/testlet/java/lang/Long/getLong.java: Added import for
	Properties; fixed typo.
